FIX: z-index to before

--- a/web/app/themes/graming/src/scss/templates/my_account.scss
+++ b/web/app/themes/graming/src/scss/templates/my_account.scss
@@ -461,7 +461,7 @@
                         width: 26px;
                         height: 25px;
                         background: url(../images/Password.svg);
-                        z-index: 1;
+                        z-index: 2;
 
                         @media (max-width: 768px) {
                             width: 25px;
